@@ -660,6 +660,8 @@ L["TEXTLAYOUTS_LAYOUTSETTINGS"] = "Layout Settings"
 L["TEXTLAYOUTS_LAYOUTSETTINGS_DESC"] = "Click to configure the text layout %q."
 
 L["TEXTLAYOUTS_DEFAULTS_ICON1"] = "Icon Layout 1"
+L["TEXTLAYOUTS_DEFAULTS_BAR1"] = "Bar Layout 1"
+L["TEXTLAYOUTS_DEFAULTS_DURATION"] = "Duration"
 L["TEXTLAYOUTS_DEFAULTS_STACKS"] = "Stacks"
 L["TEXTLAYOUTS_DEFAULTS_BINDINGLABEL"] = "Binding/Label"
 L["TEXTLAYOUTS_RENAME"] = "Rename Layout"
